cpp/difference-of-squares/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.012s
user	0m0.002s
sys	0m0.009s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
[ 25%] Building CXX object CMakeFiles/difference-of-squares.dir/difference_of_squares_test.cpp.o
[ 50%] Building CXX object CMakeFiles/difference-of-squares.dir/difference_of_squares.cpp.o
[ 75%] Building CXX object CMakeFiles/difference-of-squares.dir/test/tests-main.cpp.o
[100%] Linking CXX executable difference-of-squares
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
[100%] Built target difference-of-squares
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
===============================================================================
All tests passed (9 assertions in 3 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
[100%] Built target test_difference-of-squares
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/difference-of-squares.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/difference-of-squares.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)12186"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
difference_of_squares.cpp                      7       7   100%   
difference_of_squares_test.cpp                15      15   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         54      49    90%
------------------------------------------------------------------------------
lines: 90.7% (49 out of 54)
branches: 36.7% (55 out of 150)

real	0m9.256s
user	0m8.352s
sys	0m0.869s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.146s
user	0m0.106s
sys	0m0.040s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.320s
user	0m0.238s
sys	0m0.084s

===============================================================================

Running: clang-format-16 -style=file -i ./difference_of_squares.cpp ./difference_of_squares_test.cpp ./difference_of_squares.h

real	0m0.033s
user	0m0.016s
sys	0m0.017s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./difference_of_squares.cpp ./difference_of_squares_test.cpp ./difference_of_squares.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/difference_of_squares.h:6:10: fatal error: 'cmath' file not found
#include <cmath>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/difference_of_squares.h.

real	0m0.545s
user	0m0.497s
sys	0m0.049s


real	0m0.548s
user	0m0.497s
sys	0m0.051s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
8739 warnings generated.
44094 warnings generated.
44094 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/difference_of_squares.h.
Suppressed 44099 warnings (44094 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.693s
user	0m6.611s
sys	0m0.081s
Running: clang-tidy-16 ./difference_of_squares.cpp ./difference_of_squares_test.cpp ./difference_of_squares.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/difference-of-squares/difference_of_squares.h:6:10: error: 'cmath' file not found [clang-diagnostic-error]
#include <cmath>
         ^~~~~~~


real	0m6.695s
user	0m6.611s
sys	0m0.084s

===============================================================================

